--- a/index.html
+++ b/index.html
@@ -504,17 +504,17 @@
 
           <div class="subbox1">
             <i class="fa fa-map-marker"></i>
-            <p>Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
+            <p class="s2">Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
           </div>
 
           <div class="subbox1 s1">
             <i class="fa fa-envelope"></i>
-            <p>Email : <a href="#"> name@yourmail.com</a></p>
+            <p class="s2">Email : <a href="#"> name@yourmail.com</a></p>
           </div>
 
           <div class="subbox1 sb1">
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <div>
+            <div class="s2">
               <p>Phone : +12 (3) 456 0000</p>
               <p>Support : +12 (3) 456 0000</p>
             </div>
