--- a/ourteam.html
+++ b/ourteam.html
@@ -174,105 +174,106 @@
       </section>
 
 
-      <footer>
-        <div class="footer1Container">
-          <div class="footer1left">
-            <img src="./Assets/images/footer-logo.png" alt="" />
+   <footer>
+      <div class="footer1Container">
+        <div class="footer1left">
+          <img src="./Assets/images/footer-logo.png" alt="">
+        </div>
+        <div class="footer1right">
+          <i class="fa fa-envelope-o i1"></i>
+          <div class="footrightcontent">
+            <p class="p1">Subscribe To Our Newsletter</p>
+            <p class="p2">Stay in touch with us to get latest news and discount coupons</p>
           </div>
-          <div class="footer1right">
-            <i class="fa fa-envelope-o i1"></i>
-            <div class="footrightcontent">
-              <p class="p1">Subscribe To Our Newsletter</p>
-              <p class="p2">
-                Stay in touch with us to get latest news and discount coupons
-              </p>
+          <div class="inputfooter">
+            <input type="email" placeholder="Email Address..">
+            <i class="fa fa-envelope i2"></i>
+
+          </div>
+        </div>
+      </div>
+      <div class="footer2Container">
+
+        <div class="footer2box">
+
+          <p class="footitle">Get In Touch</p>
+
+          <div class="subbox1">
+            <i class="fa fa-map-marker"></i>
+            <p class="s2">Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
+          </div>
+
+          <div class="subbox1 s1">
+            <i class="fa fa-envelope"></i>
+            <p class="s2">Email : <a href="#"> name@yourmail.com</a></p>
+          </div>
+
+          <div class="subbox1 sb1">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <div class="s2">
+              <p>Phone : +12 (3) 456 0000</p>
+              <p>Support : +12 (3) 456 0000</p>
             </div>
-            <div class="inputfooter">
-              <input type="email" placeholder="Email Address.." />
-              <i class="fa fa-envelope i2"></i>
+          </div>
+
+        </div>
+        <div class="footer2box">
+          <p class="footitle">Useful Links</p>
+          <div class="listContent">
+            <li><i class="fa fa-check"></i><a href="./index.html">Home</a></li>
+            <li><i class="fa fa-check"></i><a href="#">FAQ</a></li>
+            <li><i class="fa fa-check"></i><a href="./aboutus.html">About Us</a></li>
+            <li><i class="fa fa-check"></i><a href="#">Offers</a></li>
+            <li><i class="fa fa-check"></i><a href="./ourteam.html">Our Team</a></li>
+            <li><i class="fa fa-check"></i><a href="#">Gallery</a></li>
+            <li><i class="fa fa-check"></i><a href="./services.html">Services</a></li>
+            <li><i class="fa fa-check"></i><a href="#">Pricing</a></li>
+            <li><i class="fa fa-check"></i><a href="./blog.html">Blog</a></li>
+            <li><i class="fa fa-check"></i><a href="#">Locations</a></li>
+            <li><i class="fa fa-check"></i><a href="./contactus.html">Contact Us</a></li>
+            <li><i class="fa fa-check"></i><a href="#">Review</a></li>
+          </div>
+        </div>
+        <div class="footer2box f3">
+
+          <p class="footitle">Recent Posts</p>
+          <div class="imagefootbox">
+            <img src="./Assets/images/post-01.jpg" alt="">
+            <div class="subfootbox">
+              <p><a href="#">Our Biggest Summer Meetup</a></p>
+              <p class="pdate">August 1, 2018</p>
+            </div>
+          </div>
+
+          <div class="imagefootbox">
+            <img src="./Assets/images/post-02.jpg" alt="">
+            <div class="subfootbox">
+              <p><a href="#">Our Biggest Summer Meetup</a></p>
+              <p class="pdate">Octomber 10, 2019</p>
             </div>
           </div>
         </div>
-        <div class="footer2Container">
-          <div class="footer2box">
-            <p class="footitle">Get In Touch</p>
-  
-            <div class="subbox1">
-              <i class="fa fa-map-marker"></i>
-              <p>Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
-            </div>
-  
-            <div class="subbox1 s1">
-              <i class="fa fa-envelope"></i>
-              <p>Email : <a href="#"> name@yourmail.com</a></p>
-            </div>
-  
-            <div class="subbox1 sb1">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <div>
-                <p>Phone : +12 (3) 456 0000</p>
-                <p>Support : +12 (3) 456 0000</p>
-              </div>
-            </div>
-          </div>
-          <div class="footer2box">
-            <p class="footitle">Useful Links</p>
-            <div class="listContent">
-              <li><i class="fa fa-check"></i><a href="./index.html">Home</a></li>
-              <li><i class="fa fa-check"></i><a href="#">FAQ</a></li>
-              <li><i class="fa fa-check"></i><a href="./aboutus.html">About Us</a></li>
-              <li><i class="fa fa-check"></i><a href="#">Offers</a></li>
-              <li><i class="fa fa-check"></i><a href="./ourteam.html">Our Team</a></li>
-              <li><i class="fa fa-check"></i><a href="#">Gallery</a></li>
-              <li><i class="fa fa-check"></i><a href="./services.html">Services</a></li>
-              <li><i class="fa fa-check"></i><a href="#">Pricing</a></li>
-              <li><i class="fa fa-check"></i><a href="./blog.html">Blog</a></li>
-              <li><i class="fa fa-check"></i><a href="#">Locations</a></li>
-              <li><i class="fa fa-check"></i><a href="./contactus.html">Contact Us</a></li>
-              <li><i class="fa fa-check"></i><a href="#">Review</a></li>
-            </div>
-          </div>
-          <div class="footer2box f3">
-            <p class="footitle">Recent Posts</p>
-            <div class="imagefootbox">
-              <img src="./Assets/images/post-01.jpg" alt="" />
-              <div class="subfootbox">
-                <p><a href="#">Our Biggest Summer Meetup</a></p>
-                <p class="pdate">August 1, 2018</p>
-              </div>
-            </div>
-  
-            <div class="imagefootbox">
-              <img src="./Assets/images/post-02.jpg" alt="" />
-              <div class="subfootbox">
-                <p><a href="#">Our Biggest Summer Meetup</a></p>
-                <p class="pdate">Octomber 10, 2019</p>
-              </div>
-            </div>
-          </div>
-          <div class="footer2box f4">
-            <p class="footitle">Get Free Estimate</p>
-            <p class="p1">123-456-78910</p>
-            <p class="p2">Our online scheduling and payment system is safe.</p>
-            <a href="#"><button>Request With Online Form</button></a>
-          </div>
+        <div class="footer2box f4">
+          <p class="footitle">Get Free Estimate</p>
+          <p class="p1">123-456-78910</p>
+          <p class="p2">Our online scheduling and payment system is safe.</p>
+          <a href="#"><button>Request With Online Form</button></a>
         </div>
-        <div class="footer3container">
-          <p>
-            Copyright © 2019 <a href="#">Construction. </a> All rights reserved.
-          </p>
-          <div class="iconBox">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"> <i class="fa fa-twitter"></i></a>
-            <a href="#"> <i class="fa fa-google-plus"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-          </div>
+      </div>
+      <div class="footer3container">
+        <p>Copyright © 2019 <a href="#">Construction. </a>  All rights reserved.</p>
+        <div class="iconBox">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"> <i class="fa fa-twitter"></i></a>
+          <a href="#"> <i class="fa fa-google-plus"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
-        <a href="#" class="upboxa">
-          <div class="upbox">
-            <i class="fa fa-angle-up"></i>
-          </div>
-        </a>
-      </footer>
+      </div>
+      <a href="#" class="upboxa">
+        <div class="upbox">
+          <i class="fa fa-angle-up"></i>
+        </div>
+      </a>
+    </footer>
 </body>
 </html>
