--- a/blog.html
+++ b/blog.html
@@ -267,43 +267,45 @@
     <footer>
       <div class="footer1Container">
         <div class="footer1left">
-          <img src="./Assets/images/footer-logo.png" alt="" />
+          <img src="./Assets/images/footer-logo.png" alt="">
         </div>
         <div class="footer1right">
           <i class="fa fa-envelope-o i1"></i>
           <div class="footrightcontent">
             <p class="p1">Subscribe To Our Newsletter</p>
-            <p class="p2">
-              Stay in touch with us to get latest news and discount coupons
-            </p>
+            <p class="p2">Stay in touch with us to get latest news and discount coupons</p>
           </div>
           <div class="inputfooter">
-            <input type="email" placeholder="Email Address.." />
+            <input type="email" placeholder="Email Address..">
             <i class="fa fa-envelope i2"></i>
+
           </div>
         </div>
       </div>
       <div class="footer2Container">
+
         <div class="footer2box">
+
           <p class="footitle">Get In Touch</p>
 
           <div class="subbox1">
             <i class="fa fa-map-marker"></i>
-            <p>Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
+            <p class="s2">Themeforest, Envanto HQ 24 Fifth st., Los Angeles, USA</p>
           </div>
 
           <div class="subbox1 s1">
             <i class="fa fa-envelope"></i>
-            <p>Email : <a href="#"> name@yourmail.com</a></p>
+            <p class="s2">Email : <a href="#"> name@yourmail.com</a></p>
           </div>
 
           <div class="subbox1 sb1">
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <div>
+            <div class="s2">
               <p>Phone : +12 (3) 456 0000</p>
               <p>Support : +12 (3) 456 0000</p>
             </div>
           </div>
+
         </div>
         <div class="footer2box">
           <p class="footitle">Useful Links</p>
@@ -323,9 +325,10 @@
           </div>
         </div>
         <div class="footer2box f3">
+
           <p class="footitle">Recent Posts</p>
           <div class="imagefootbox">
-            <img src="./Assets/images/post-01.jpg" alt="" />
+            <img src="./Assets/images/post-01.jpg" alt="">
             <div class="subfootbox">
               <p><a href="#">Our Biggest Summer Meetup</a></p>
               <p class="pdate">August 1, 2018</p>
@@ -333,7 +336,7 @@
           </div>
 
           <div class="imagefootbox">
-            <img src="./Assets/images/post-02.jpg" alt="" />
+            <img src="./Assets/images/post-02.jpg" alt="">
             <div class="subfootbox">
               <p><a href="#">Our Biggest Summer Meetup</a></p>
               <p class="pdate">Octomber 10, 2019</p>
@@ -348,9 +351,7 @@
         </div>
       </div>
       <div class="footer3container">
-        <p>
-          Copyright © 2019 <a href="#">Construction. </a> All rights reserved.
-        </p>
+        <p>Copyright © 2019 <a href="#">Construction. </a>  All rights reserved.</p>
         <div class="iconBox">
           <a href="#"><i class="fa fa-facebook"></i></a>
           <a href="#"> <i class="fa fa-twitter"></i></a>
