--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <nav class="mobileNav">
-      <div class="threelines">
+      <div class="threelines" onclick="menuFunction()">
         <div></div>
         <div></div>
         <div></div>
@@ -39,7 +39,7 @@
       </div>
     </nav>
 
-    <section class="nav2">
+    <section class="nav2" id="nav2">
       <div class="navImage">
         <img src="./Assets/images/logo-img.png" alt="" />
       </div>
@@ -579,5 +579,6 @@
         </div>
       </a>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
